--- a/src/styles/scss/layout/_dynamics-ecosystem.scss
+++ b/src/styles/scss/layout/_dynamics-ecosystem.scss
@@ -19,13 +19,13 @@
 
 .dynamics-ecosystem-heading {
   max-width: 100%;
-  margin: 0 0 22px;
+  margin: 0 0 18px;
   text-align: left;
 }
 
 .dynamics-ecosystem-kicker {
   display: inline-block;
-  margin-bottom: 10px;
+  margin-bottom: 12px;
 }
 
 .dynamics-ecosystem-title {
@@ -35,6 +35,7 @@
   font-size: 40px;
   font-weight: 700;
   line-height: 1.15;
+  letter-spacing: -0.02em;
 }
 
 .dynamics-ecosystem-desc {
