--- a/src/styles/scss/layout/_solutions.scss
+++ b/src/styles/scss/layout/_solutions.scss
@@ -106,10 +106,11 @@
   font-size: 40px;
   font-weight: 700;
   line-height: 1.15;
+  letter-spacing: -0.02em;
 }
 
 .solutions-desc {
-  margin: 0 0 28px;
+  margin: 0 0 18px;
   color: var(--tv-text-body);
   font-family: var(--tv-ff-body);
   font-size: 18px;
