--- a/src/styles/scss/layout/_trainings.scss
+++ b/src/styles/scss/layout/_trainings.scss
@@ -26,6 +26,8 @@
 
   .training-title {
     margin-bottom: 18px;
+    line-height: 1.15;
+    letter-spacing: -0.02em;
 
     span {
       color: var(--tv-theme-1);
